--- a/projekt/Makefile
+++ b/projekt/Makefile
@@ -1,7 +1,8 @@
-OBJ = main.o
+OBJ = main.o copy.o
 all: projekt
 projekt: $(OBJ)
 	gcc $(OBJ) -o projekt
+$(OBJ):copy.h
 .PHONY: clean
 clean:
 	rm -f *.o projekt
