--- a/copy/Makefile
+++ b/copy/Makefile
@@ -1,9 +1,8 @@
-OBJ = main.o
-all: copy
-copy: $(OBJ)
-	gcc $(OBJ) -o copy
-
+OBJ = main.o serialize.o
+all: serialize
+serialize: $(OBJ)
+	gcc $(OBJ) -o serialize
+$(OBJ):serialize.h
 .PHONY: clean
 clean:
-	rm -f *.o copy
-
+	rm -f *.o serialize
